css/app.css
/* ... */
.tab-panel {
  border-top: 1px solid var(--grey);
  box-sizing: border-box;
  flex: 1 0 100%;
  padding: 1rem;
}

.tab-panel:not(:target) {
  display: none;
}

.button {
  display: inline-block;
  padding: .5rem;
  text-decoration: none;
  color: var(--contrast);
  font-weight: bold;
  border: 1px solid var(--contrast);
  border-radius: .25rem;
  background-color: var(--lightgrey);
}

.button:is(:hover, :focus, :active) {
  background-color: var(--grey);
}
.forkme {
  position: absolute;
  top: 0;
  right: 0;
}

/* MAIN LAYOUT */
.app {
  width: 100dvw;
  height: 100dvh;
  scroll-snap-type: y mandatory;
  overflow: auto;
}

.page {
  width: 100%;
  height: 100vh;
  scroll-snap-align: start;
  background-color: var(--contrast);
  @supports (height: 100dvh) {
    height: 100dvh;
  }
}

.page > * {
  background-color: var(--bgcolor);
}

.first {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: .75fr .75fr .5fr 1.5fr .5fr 1fr;
  gap: .125rem;
  grid-auto-flow: row;
  grid-template-areas:
    "info info info info info info talents talents talents"
    "charac charac charac points points points talents talents talents"
    "charac charac charac Mouvement Mouvement Mouvement talents talents talents"
    "skills skills skills skills skills skills ambitions ambitions ambitions"
    "skills skills skills skills skills skills party party party"
    "skills skills skills skills skills skills party party party";
}

.second {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr .75fr 1.25fr 1.25fr 1fr .75fr;
  gap: .125rem;
  grid-auto-flow: row;
  grid-template-areas:
    "armour armour armour armour armour-points armour-points wounds wounds"
    "armour armour armour armour armour-points armour-points wounds wounds"
    "trappings trappings trappings encumbrance armour-points armour-points psychology psychology"
    "trappings trappings trappings encumbrance wealth wealth corruption corruption"
    "weapons weapons weapons weapons spells spells spells spells"
    "weapons weapons weapons weapons spells spells spells spells";
}

/* FORM ELEMENTS */
fieldset {
  margin: 0;
  padding: 0 .5rem .5rem;
  border: 0;
  min-width: 0;
  overflow: auto;
}

legend {
  float: left;
  position: sticky;
  top: 0;
  background-color: var(--bgcolor);
  width: 100%;
  text-align: center;
  font-size: 1em;
  line-height: 1.5;
  margin-block-end: .5rem;
  padding: .5rem 0 0;
  font-weight: bold;
  font-family: Luminari, Times, serif;
}

.field {
  display: inline-flex;
  flex-wrap: nowrap;
  column-gap: .5rem;
  padding-inline: .5rem;
  align-items: center;
}
.field label {
  white-space: nowrap;
}

input:not([type="checkbox"]), output {
  width: 100%;
  border: none;
  padding-block: 0;
}
:is(input:not([type="checkbox"]), select, [contenteditable]):is(:focus, :focus-visible) {
  outline: 0;
  background-color: hsla(0, 0%, 70%, .3);
}
input:invalid {
  background-color: hsla(0, 100%, 70%, .3);
}
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type="number"] {
  -moz-appearance: textfield;
}

select {
  border: 0;
  background-color: transparent;
  text-align: center;
}

/* TABLES */
table {
  border-collapse: collapse;
  border-style: hidden;
  border-top: 1px solid var(--contrast);
  width: 100%;
}

table :is(td, th) {
  border: 1px solid var(--contrast);
  text-align: center;
  padding: .25rem .125rem;
  font-weight: normal;
  font-size: .8em;
  height: 1.5em;
}

table.left-aligned tbody :is(th, td:first-child) {
  text-align: start;
  font-size: .7em;
  white-space: nowrap;
}

table :is(input:not([type="checkbox"]), output) {
  width: calc(100% - .25rem);
  min-width: 1.2rem;
  text-align: center;
}

table .medium {
  width: 35%;
}
table .narrow {
  width: 10%;
}

table.layout-fixed {
  table-layout: fixed;
}


/* FIRST PAGE */

/* Info */
.info {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  gap: 1px 1px;
  grid-template-areas:
    "name name species class"
    "career career career-tier career-tier"
    "career-path career-path career-path status"
    "age height hair eyes";
  grid-area: info;
  background-color: var(--contrast);
  border-top: .5rem solid var(--bgcolor);
  border-bottom: .5rem solid var(--bgcolor);
  border-left: 1rem solid var(--bgcolor);
  border-right: 1rem solid var(--bgcolor);
  padding: 0;
  font-size: 0.9em;
  font-family: Luminari, Times, serif;
}
.info > * {
  background-color: var(--bgcolor);
}
.info label {
  font-weight: bold;
}
.eyes { grid-area: eyes; }
.hair { grid-area: hair; }
.height { grid-area: height; }
.age { grid-area: age; }
.career-path { grid-area: career-path; }
.status { grid-area: status; }
.career-tier { grid-area: career-tier; }
.career { grid-area: career; }
.species { grid-area: species; }
.name { grid-area: name; }
.class { grid-area: class; }

/* Characteristics */
.charac {
  grid-area: charac;
}

/* Points */
.points { grid-area: points; }

.points-wrapper {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: row;
  flex-wrap: nowrap;
  background-color: var(--contrast);
  align-items: stretch;
  gap: .125rem;
}

.points-wrapper > fieldset {
  flex: 1 1 50%;
  min-width: 20%;
  padding-inline: .125rem;
  background-color: var(--bgcolor);
}

.points-wrapper > fieldset:first-child {
  flex-basis: 20%;
}

.points-wrapper > fieldset:last-child {
  flex-basis: 30%;
}

.points-wrapper input {
  font-size: .875em;
}

.counter input[type="number"] {
  width: 25%;
  min-width: 0;
  padding: 0;
}

/* Movement */
.movement {
  grid-area: Mouvement;
}
.movement-wrapper {
  display: flex;
  width: 100%;
  flex-direction: row;
  flex-wrap: nowrap;
  border-top: 1px solid var(--contrast);
}
.movement-wrapper > div {
  flex: 1 1 33%;
  display: inline-flex;
  align-items: stretch;
}
/* ... */

